@@ -299,6 +299,7 @@ Honeywell Q400 (q400)
 Kamstrup Multical 21 (multical21)
 Kamstrup flowIQ 2200 (flowiq2200)
 Kamstrup flowIQ 3100 (flowiq3100)
+Qundis QWater5.5 (lse_07_17)
 Sontex Supercom 587 (supercom587)
 Sensus iPERL (iperl)
 Techem MK Radio 3 and 4 (mkradio3,mkradio4) (non-standard protocols)
