@@ -8,8 +8,9 @@ TEST=testoutput
 TESTNAME="Test S1 meters"
 TESTRESULT="ERROR"
 
-METERS="HCA auto 91835132 NOKEY \
-        HCA2 auto 04998541 NOKEY"
+METERS="HCA  auto 91835132 NOKEY \
+        HCA2 auto 04998541 NOKEY \
+        QW   auto 13346376 NOKEY "
 
 cat simulations/simulation_s1.txt | grep '^{' > $TEST/test_expected.txt
 $PROG --format=json simulations/simulation_s1.txt $METERS > $TEST/test_output.txt 2> $TEST/test_stderr.txt
