@@ -1,4 +1,6 @@
 
+Mblnk added support for Qundis QWater5.5. Thanks Mblnk!
+
 Support added for the water meter Diehl IZAR RC I G4.
 
 Version 1.3.0: 2021-04-09
